--- a/caseStudyWP/index.Rmd
+++ b/caseStudyWP/index.Rmd
@@ -3,7 +3,8 @@ title: "Case Study Applications of LRP Estimation Methods to Pacific Salmon Stoc
 author: |
   Kendra Holt^1^
   Carrie A. Holt^2^
-  Luke Warkentin^1^ and
+  Luke Warkentin^1^
+  Wor, Catarina^2 and
   others (TBD)^2^
 author_list: "Holt, K., Holt, C.A., Warkentin, L., Wor, C. and others(TBD)"
 address: |
