--- a/caseStudyWP/03-chap3.Rmd
+++ b/caseStudyWP/03-chap3.Rmd
@@ -45,7 +45,13 @@ To Do:  need to work in @korman_evaluation_2019
 
 ## DATA
 
-Data for this case study cover return years 1998 -2020. Data prior to 1998 were not used due to concerns about inconsistent assessment methods and data quality. All Interior Fraser Coho data were provided by DFO's Fraser River Stock Assessment Unit (M. Arbeider, pers. comm). These data included: (i) annual spawner abundance by CU (1998-2020), (ii) annual recruits-at-age by CU (brood years 1998 - 2016), (iii) a hatchery-based smolt-to-adult survival rate index, (iv) annual exploitation rates, and (v) annual spawner abundances for 11 sub-populations nested within the 5 CUs.
+Data for this case study cover return years 1998 -2020. Data prior to 1998 were not used due to concerns about inconsistent assessment methods and data quality. All Interior Fraser Coho data were provided by DFO's Fraser River Stock Assessment Unit (M. Arbeider, pers. comm). These data included: (i) annual spawner abundance by CU (1998-2020; @ref(fig:coho-CU-timeseries-Combined)), (ii) annual recruits-at-age by CU (brood years 1998 - 2016), (iii) a hatchery-based smolt-to-adult survival rate index, (iv) annual exploitation rates, and (v) annual spawner abundances for 11 sub-populations nested within the 5 CUs.
+
+
+```{r coho-CU-timeseriesCombined, fig.cap="Escapement time series for five Interior Fraser Coho CUs", warning=FALSE, echo=FALSE, fig.align="center"}
+knitr::include_graphics("figure/coho-CU-EscpSeries-Combined.png")
+```
+
 
 Data were similar to those previously described in Arbeider et al. 2020.  Detailed descriptions of data treatments, assumptions, infilling, and data quality are provided in @arbeider_interior_2020. More recent updates that are not described in @arbeider_interior_2020 include the incorporation of three additional years of data (return years 2018-2020), updates to the smolt-to-adult marine survival rate index to use a weighted average by release size, and increased data quality screening of scale ages used to calculate recruitment-at-age (M. Arbeider, pers. comm).
 
@@ -198,12 +204,12 @@ The second type of CU benchmark is based on the distribution of spawning escapem
 We looked at the proportion of CUs that dropped below Sgen (Figure \@ref(fig:coho-CU-timeseries)) and the proportion of CUs that failed to meet the distributional target of 1000 fish in half of subpopulations \@ref(fig:coho-Subpop-timeseries)) to determine in which years between 1998 and 2020 the LRP would have been breached. Status was assessed as being below the LRP in years in which one or more CUs was below their CU-level benchmark. Estimates of Sgen were based on all data available up to 2020, so our evaluation is not a true retrospective analysis. 
 
 
-```{r coho-CU-timeseries, fig.cap="Escapement time series for five Interior Fraser Coho CUs. Solid red lines show estimates of Sgen from the IM model, while dashed red lines show estimates of Sgen from the IM.HiCap model", warning=FALSE, echo=FALSE, fig.align="center"}
+```{r coho-CU-timeseries, fig.cap="Escapement time series for five Interior Fraser Coho CUs shown as annual escapements (grey lines) and 3-year geometric mean escapements (thick black line). Solid red lines show estimates of Sgen from the IM model, while dashed red lines show estimates of Sgen from the IM.HiCap model", warning=FALSE, echo=FALSE, fig.align="center"}
 knitr::include_graphics("figure/coho-CU-EscpSeries.png")
 ```
 
 
-```{r coho-Subpop-timeseries, fig.cap="Escapement time series for 11 subpopulations of Interior Fraser Coho. CUs to which each subpopulation belong to are shown in Table ----", warning=FALSE, echo=FALSE, fig.align="center"}
+```{r coho-Subpop-timeseries, fig.cap="Escapement time series for 11 subpopulations of Interior Fraser Coho shown as annual escapements (grey lines) and 3-year geometric mean escapements (thick black line). CUs to which each subpopulation belong to are shown in Table ----", warning=FALSE, echo=FALSE, fig.align="center"}
 knitr::include_graphics("figure/coho-Subpop-EscpSeries.png")
 ```
 
@@ -211,12 +217,16 @@ knitr::include_graphics("figure/coho-Subpop-EscpSeries.png")
 
 **Results**
 
-For three of the five CUs, estimates of Sgen based on the IM.cap spawner recruit model were higher than those based on the IM model (Figure \@ref(fig:coho-CU-timeseries)). The North Thompson CU showed the opposite pattern, with the Sgen estimate from the IM model higher than that from the IM.cap model. The fifth CU, Fraser Canyon, has almost equal estimates for the two approaches.   
-To do:
-- describe how im vs. imcap model affected number of years in which each CU dropped below Sgen
+For three of the five CUs,estimates of Sgen based on the IM.cap spawner recruit model were higher than those based on the IM model (Middle Fraser, Lower Thompson, and South Thompson CUs; Figure \@ref(fig:coho-CU-timeseries)). The North Thompson CU showed the opposite pattern, with the Sgen estimate from the IM model higher than that from the IM.cap model. The fifth CU, Fraser Canyon, had almost equal estimates for the two approaches with Sgen estimates only differing by 32 fish. 
 
+For all five CUs, the generational (3-year) geometric average escapement between 2001 and 2020 remained above the estimated value of Sgen in 2020 ($Sgen_{2020}$), regardless of which stock recruit model was used to estimate Sgen (Figure \@ref(fig:coho-CU-timeseries)).Because the proportion of CUs above Sgen was always 100%, there were no years in the available time series that were below the proportion-based LRP. 
 
-The Lower North Thompson sub-population was the only sub-population that remained above the 1000 spawner threshold in all years (Figure \@ref(fig:coho-Subpop-timeseries)). All other CUs dropped below 1000 spawners in one or more years, with 2006 apparent as an especially poor year in which almost all subpopulations were below 1000 spawners. All 11 subpopulations were above 1000 spawners in 2020, which means that the SMU would be well above the LRP based on the proportional LPR approach applied to the distributional benchmark .
+Only 3 of the 11 sub-populations had their generational average escapement remain above the 1000 spawner threshold in all years (Figure \@ref(fig:coho-Subpop-timeseries)). All other CUs dropped below 1000 spawners in one or more years. 
+
+[--- more results summary to be added here ----]
+
+All 11 subpopulations were above 1000 spawners in 2020, which means that the SMU would be well above the LRP based on the proportional LPR approach applied to the distributional benchmark in 2020 (Figure \@ref(fig:coho-Subpop-timeseries)).
+
 
 
 ### LRP Estimation: Aggregate Abundance Empirical LRPs 
@@ -224,19 +234,43 @@ The Lower North Thompson sub-population was the only sub-population that remaine
 
 **Methods**
 
-We evaluated aggregate abundance-based LRPs derived using logistic regressions for both types of Interior Fraser Coho benchmarks described above: 
+We evaluated aggregate abundance-based LRPs derived using logistic regressions for both types of Interior Fraser Coho benchmarks: Sgen and the distributional target of 1000 fish in half of sub-populations. See Section \@ref(logisticMethods) for an overview of the approach used to calculate aggregate abundance-based LRPs using logistic regression.
 
-- Integrated model
+When estimating logistic regression LRPs using Sgen, we used an integrated modelling approach in which CU-level Sgen and the SMU-level LRP were simultaneously estimated. The integrated Sgen-LRP models had two components: 
+
+(i)	Stock-recruit models fit to each of the 5 CUs to estimate CU-level Sgen (Equation \@ref(eq:rickerSurv-IM) and Equations \@ref(eq:adjProd) - \@ref(eq:Sgen))
+
+(ii)	A logistic regression model fit to aggregated data to estimate the LRP as the aggregate abundance that has historically been associated with a specified probability of all CUs being above Sgen (Equations \@ref(eq:logistic) - \@ref(eq:logisticLRP))
+
+
+
+
+***Retrospective Analysis***
+
+We used a retrospective analysis to examine the effect of time series length on aggregate abundance-based LRP estimates when using the logistic regression approach. Retrospective analyses were restricted to the most recent x years (2015-2020) because logistic model fits prior to xxxx were unable to converge on an LRP estimate.  For each year between xxxx and xxxx, we used data only available up to that year to calculate LRPs and associated confidence intervals.
+
+
+***Effect of Missing CUs***
+
+To examine the effect of missing CUs on LRP estimates, we calculated LRPs using data from only a subset of the five Interior Fraser Coho CUs.  We limited our analysis to missing data from either one or two CUs so that we had at least three CUs of available data when calculating the proportion of CUs above their benchmarks.  For each missing data case, we calculated SMU status as
+
+\begin{equation}
+  Status_t = \frac{\sum_{i}^{nCUs} S_{i,t}}{LRP'_t}
+   (\#eq:status)
+\end{equation}
+
+where $nCUs$ is the number of CUs being used (3 or 4) and $LRP'_t$ is the LRP calculated in year $t$ using only data from $nCUs$.  SMU-level status in a given year was calculated for all possible combinations of CUs available (5 combinations when nCUs = 4 and 10 combinations when nCUs = 3) to allow examination of the stability of status estimates among available combinations. Estimates of SMU status relative to LRPs were used to compare among missing CU scenarios instead of absolute LRP  estimates because  absolute LRP estimates vary with the number (and combination) of CUs used.
+
 
 **Results**
 
 
 
-Figure 2: Logistic model fit - IM in 2020
+Figure: Logistic model fit - IM in 2020
 
-Figure 3: Logistic model fit - IM cap in 2020
+Figure: Logistic model fit - IM cap in 2020
 
-Figure 4: Logistic model fit - distribution
+Figure: Logistic model fit - distribution
 
 Appendix: Maximum posterior density estimates (± standard error) obtained from fitting the ‘Individual Ricker’ (IM) version of the Integrated Sgen-LRP model to Interior Fraser Coho data.
 
