--- a/caseStudyWP/06-chap6.Rmd
+++ b/caseStudyWP/06-chap6.Rmd
@@ -1,3 +1,10 @@
 # LESSONS LEARNED FROM CASE STUDY APPLICATIONS
 
 - SYnthesize main results and conclusions from case studies
+
+
+
+
+Some ideas include:
+
+- If data limitations arise in application of LRP to a stock, increased monitoring, data quality could be part of recovery plan/ trigger
